# amd64_os_uefi

./: Cargo.toml  README.md  build.bat
.cargo/: config.toml
boot/: Cargo.toml
boot/src/: main.rs
kernel/: Cargo.toml  cargo
kernel/src/: gdt.rs  main.rs  memory.rs
kernel/src/framebuffer/: logger.rs  mod.rs
kernel/src/framebuffer/fonts/: mod.rs
kernel/src/interrupts/: mod.rs
