[package]
name = "kernel"
version = "0.1.0"
authors = ["Luuk van Oijen <lazyluuk.channel@gmail.com>"]
edition = "2018"

[dependencies]
bootloader = { version = "0.10.0-alpha-02", features = ["map_physical_memory"] }
spin = "0.7.1"

log = "*"

cpuio = "*"
x86_64 = "0.13.2"
x86 = "0.36.0"

# acpi = "2.2.0"

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]

[dependencies.font8x8]
version = "0.2.5"
default-features = false
features = ["unicode"]

[package.metadata.bootloader]
map-physical-memory = true
physical-memory-offset = "0xFFFF800000000000"
